@@ -195,6 +195,11 @@ Specify the white balance mode. Valid values are: Auto, Daylight,
 Shade, Cloudy, Fluorescent_D, Fluorescent_N, Fluorescent_W, 
 Fluorescent_L, Tungsten, Flash, Manual, CTE\.
 .RE
+.PP
+\fB\-\-white_balance_adjustment\fR \fIWB_ADJ\fR
+.RS 4
+Specify the white balance adjustment. Valid values like: G5B2, G3A5, B5, A3, G5, M4\.
+.RE
 .HnS 2
 .SS Other
 .HnE
